WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198342
Fix builds that don't use makeWindowFromView
https://bugs.webkit.org/show_bug.cgi?id=198342
Summary
Fix builds that don't use makeWindowFromView
Keith Rollin
Reported
2019-05-29 11:02:56 PDT
In some configurations, VideoFullscreenInterfaceAVKit.mm declares but does not use makeWindowFromView. Fix by conditionalizing the the declaration on the same symbol as point where it's used.
Attachments
Patch
(1.80 KB, patch)
2019-05-29 11:05 PDT
,
Keith Rollin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-05-29 11:03:49 PDT
<
rdar://problem/51228563
>
Keith Rollin
Comment 2
2019-05-29 11:05:05 PDT
Created
attachment 370866
[details]
Patch
WebKit Commit Bot
Comment 3
2019-05-29 12:16:42 PDT
Comment on
attachment 370866
[details]
Patch Clearing flags on attachment: 370866 Committed
r245861
: <
https://trac.webkit.org/changeset/245861
>
WebKit Commit Bot
Comment 4
2019-05-29 12:16:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug