Fix builds that don't use makeWindowFromView https://bugs.webkit.org/show_bug.cgi?id=198342 <rdar://problem/51228563>

Reviewed by Wenson Hsieh.

In some configurations, VideoFullscreenInterfaceAVKit.mm declares but
does not use makeWindowFromView. Fix by conditionalizing the the
declaration on the same symbol as point where it's used.

No new tests -- no new functionality.

* platform/ios/VideoFullscreenInterfaceAVKit.mm:


Canonical link: https://commits.webkit.org/212371@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245861 268f45cc-cd09-0410-ab3c-d52691b4dbfc